Fixed Nav bar clipping

--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@ body {
     /*min-height: 600px;*/
     position: relative;
     background-color: blue;
-
-
 }
 
 .view {
     position: absolute;
-    top: 6.5%;
+    top: 50px;
     height: 100%;
     /*position: inherit;*/
 
@@ -65,7 +63,6 @@ body {
     left: 50%;
     top: 10%;
     transform: translate(-50%, -43.5%);
-
 }
 
 .box-25 {
@@ -74,14 +71,32 @@ body {
     height: 225px;
     width: 225px;
     background-size: cover;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 20px;
 }
 
+.box-25 p:hover {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.85);
+}
+
+.sos p, .fare p {
+    transition: 500ms;
+    position: absolute;;
+    text-align: center;
+    margin: 1em;
+    height: 225px;
+    width: 225px;
+    background-size: cover;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    left: 0;
+    top: 0;
+    opacity: 0;
+}
 .sos {
     background-image: url(sosLogo.png);
 }
-
 .fare {
     background-image: url(whatsmyfareLogo.png);
 }
@@ -113,16 +128,16 @@ body {
     float: left;
     color: black;
     padding: 0px 30px;
+    transition: 300ms;
+}
 
-}
 .icons i:hover {
-    font-size: 80px;
+    transform: scale(1.25);
 }
+
 .icons i:active {
     color: gray;
 }
-
-
 
 
 /*Top Menu Bar:*/
@@ -144,7 +159,7 @@ a {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 6.5%;
+    height: 50px;
     min-height: 50px;
     text-align: center;
 }
@@ -163,9 +178,10 @@ a {
 
 .menu li a {
     text-align: center;
-    padding: 14px 5%;
+    padding: 14px 50px;
     text-decoration: none;
     display: inline-block;
+    transition: 400ms;
 }
 
 .menu li a:hover {
